--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -2,7 +2,7 @@
     border: 1px solid var(--border-color);
     border-radius: 10px;
     display: flex;
-    margin: 15px 15px;
+    margin: 15px;
     width: 450px;
     padding: 10px;
     flex-direction: column;
