--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -2,7 +2,8 @@
     display: flex;
     flex: 1 1 auto;
     background-color: var(--color-white);
-    margin: 15px;
+    /* margin: 15px; */
+    margin: 40px 15px 15px;
     border: 1px solid var(--border-color);
     border-radius: 10px;
     box-shadow: 0 0 5px var(--border-color);
