--- a/src/pages/signin/signin.hbs
+++ b/src/pages/signin/signin.hbs
@@ -1,3 +1,9 @@
 <div class="sign-form">
-    {{{form}}}
+    <div class="form">
+        <h3>Sign In</h3>
+        {{{ loginInput }}}
+        {{{ passwordInput }}}
+        {{{ submitButton }}}
+        {{{ link }}}
+    </div>
 </div>
