--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -5,8 +5,8 @@
     border: 1px solid transparent;
     border-radius: 5px;
     padding: 6px 12px;
-    margin: 5px 0px;
-    color: #ffffff;
+    margin: 5px 0;
+    color: var(--color-white);
     justify-content: center;
     font-size: 24px;
     text-decoration: none;
