--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     display: flex;
-    margin: 5px 0px;
+    margin: 5px 0;
     border: 1px solid var(--border-color);
     align-items: center;
 
@@ -11,7 +11,7 @@
         z-index: 1;
         left: 10px;
         background-color: var(--main-bg-color);
-        padding: 0px 5px;
+        padding: 0 5px;
         font-size: 16px;
         line-height: 12px;
         color: var(--border-color);
@@ -25,8 +25,8 @@
     }
 
     input{
-        border-width: 0px;
-        border-radius: 0px;
+        border-width: 0;
+        border-radius: 0;
         line-height: 14px;
         position: relative;
         padding: 7px;
