--- a/src/components/link/link.css
+++ b/src/components/link/link.css
@@ -1,4 +1,23 @@
 a.link{
-    color: #1d74f5;
+    color: var(--link-color);
     text-decoration: none;
+}
+
+a.button{
+    display: flex;
+    width: 100%;
+    background-color: var(--color-primary);
+    border: 1px solid transparent;
+    border-radius: 5px;
+    padding: 6px 12px;
+    margin: 5px 0;
+    color: var(--color-white);
+    justify-content: center;
+    font-size: 24px;
+    text-decoration: none;
+
+&:hover{
+     cursor: pointer;
+     box-shadow: 0 0 14px var(--color-primary-shadow);
+ }
 }
