--- a/src/pages/chat/pages/active-chat/components/message/message.css
+++ b/src/pages/chat/pages/active-chat/components/message/message.css
@@ -8,7 +8,7 @@
         > .message{
             border: 1px solid var(--second-bg-color);
             background-color: var(--second-bg-color);
-            border-radius: 0px 5px 5px 5px;
+            border-radius: 0 5px 5px;
         }
     }
 
@@ -18,7 +18,7 @@
         > .message{
             border: 1px solid var(--color-primary);
             background-color: var(--color-primary);
-            border-radius: 5px 5px 0px 5px;
+            border-radius: 5px 5px 0;
 
             > .message-content{
                 color: var(--color-white);
