--- a/src/components/form/form.hbs
+++ b/src/components/form/form.hbs
@@ -1,6 +1,8 @@
 <div class="form">
+	<form>
         <h3>{{{ formLabel }}}</h3>
         {{#each formData}}
-            {{ this }}
+            {{{ this }}}
         {{/each}}
+   </form>
 </div>
