--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -11,7 +11,7 @@
 
 @media screen and (max-width: 700px){
     #wrapper{
-        margin: 0;
+        margin: 60px 0 0;        
         border-radius: 0;
     }
 }
