--- a/src/pages/signin/signin.hbs
+++ b/src/pages/signin/signin.hbs
@@ -1,9 +1,3 @@
 <div class="sign-form">
-    <div class="form">
-        <h3>Sign In</h3>
-        {{{ loginInput }}}
-        {{{ passwordInput }}}
-        {{{ submitButton }}}
-        {{{ link }}}
-    </div>
+	{{{ signInForm }}}
 </div>
