--- a/src/components/input/input.hbs
+++ b/src/components/input/input.hbs
@@ -30,8 +30,8 @@
             value="{{{value}}}"
         {{/if}}
     />
-    
-    	<p style="color: red">{{{validationError}}}</p>
-    
-    
 </div>
+{{#if validationError}}
+    <p style="color: red">{{{validationError}}}</p>
+{{/if}}
+
