--- a/src/components/input/input.hbs
+++ b/src/components/input/input.hbs
@@ -31,7 +31,4 @@
         {{/if}}
     />
 </div>
-{{#if validationError}}
-    <p style="color: red">{{{validationError}}}</p>
-{{/if}}
-
+<p class="error-message" style="color: red">{{{validationError}}}</p>
