--- a/src/pages/signin/signin.hbs
+++ b/src/pages/signin/signin.hbs
@@ -1,5 +1,11 @@
 <div class="sign-form">
-    {{{ passwordInput }}}
-    {{{ loginInput }}}
-
+	<div class="form">
+		<form>
+			<h3>Sign In</h3>
+  			{{{ loginInput }}}
+  			{{{ passwordInput }}}
+  			{{{ submitButton }}}
+  			{{{ signUpLink }}}
+  		</form>
+	</div>    		
 </div>
