--- a/src/components/input/input.hbs
+++ b/src/components/input/input.hbs
@@ -31,4 +31,4 @@
         {{/if}}
     />
 </div>
-<p class="error-message" style="color: red">{{{validationError}}}</p>
+<p class="error-message">{{{validationError}}}</p>
