--- a/src/components/link/link.hbs
+++ b/src/components/link/link.hbs
@@ -1,1 +1,1 @@
-<a class="{{{className}}}" href="{{{to}}}">{{{label}}}</a>
+<a class="{{#if classList}}{{classList}}{{/if}}" href="{{{to}}}">{{{label}}}</a>
