--- a/src/pages/error/error.hbs
+++ b/src/pages/error/error.hbs
@@ -1,5 +1,5 @@
 <div class="error-page">
-    <div class="error-page__code">{{{code}}}</div>
-    <div class="error-page__message">{{{message}}}</div>
-    {{{backLink}}}
+    <div class="error-page__code">{{ errorCode }}</div>
+    <div class="error-page__message">{{{ errorMessage }}}</div>
+    {{{ backLink }}}
 </div>
