--- a/src/pages/signin/signin.hbs
+++ b/src/pages/signin/signin.hbs
@@ -1,11 +1,9 @@
 <div class="sign-form">
-	<div class="form">
-		<form>
-			<h3>Sign In</h3>
-  			{{{ loginInput }}}
-  			{{{ passwordInput }}}
-  			{{{ submitButton }}}
-  			{{{ signUpLink }}}
-  		</form>
-	</div>    		
+    <form class="form">
+        <h3>Sign In</h3>
+        {{{ loginInput }}}
+        {{{ passwordInput }}}
+        {{{ submitButton }}}
+        {{{ signUpLink }}}
+    </form>
 </div>
