--- a/src/pages/signup/signup.hbs
+++ b/src/pages/signup/signup.hbs
@@ -1,3 +1,14 @@
 <div class="sign-form">
-    {{{form}}}
+    <form class="form">
+        <h3>Create profile</h3>
+        {{{ emailInput }}}
+        {{{ loginInput }}}
+        {{{ firstNameInput }}}
+        {{{ secondNameInput }}}
+        {{{ phoneInput }}}
+        {{{ passwordInput }}}
+        {{{ repeatPasswordInput }}}
+        {{{ submitButton }}}
+        {{{ signInLink }}}
+    </form>
 </div>
