--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     --color-gray3: #666;
     --color-primary: #3390ec;
     --color-primary-shadow: #4eb2f5;
+    --color-danger: #df4759;
     --second-bg-color: #f5f5f5;
     --link-color: #1d74f5;
     --color-white-shadow: var(--color-gray);
@@ -49,7 +50,25 @@ nav{
 #root{
     display: flex;
     flex: 1 1 auto;
-    padding-top: 40px;
+    padding-top: 20px;
+}
+
+#wrapper{
+    display: flex;
+    flex: 1 1 auto;
+    background-color: var(--color-white);
+    /* margin: 15px; */
+    margin: 20px 15px 15px;
+    border: 1px solid var(--border-color);
+    border-radius: 10px;
+    box-shadow: 0 0 5px var(--border-color);
+}
+
+@media screen and (max-width: 700px){
+    #wrapper{
+        margin: 60px 0 0;
+        border-radius: 0;
+    }
 }
 
 h3{
