--- a/src/pages/chat/components/chat-element/chat-element.hbs
+++ b/src/pages/chat/components/chat-element/chat-element.hbs
@@ -1,19 +1,19 @@
-<a class="chatlist" href="/chat/view">
+<a class="chatlist">
     <div class="chat-element">
         <div class="chat-element__element">
             <div class="user-avatar">
-                {{{chatUserAvatar}}}
+                {{{ chatUserAvatar }}}
             </div>
             <div class="chat-info">
                 <div class="chat-info__row">
-                    <div class="user-name">{{{chatUserName}}}</div>
+                    <div class="user-name">{{{ chatUserName }}}</div>
                     {{#if chatNewMessages}}
-                        <div class="chat-new-messages">{{{chatNewMessages}}}</div>
+                        <div class="chat-new-messages">{{{ chatNewMessages }}}</div>
                     {{/if}}
                 </div>
                 <div class="chat-info__row">
-                    <div class="last-message">{{{chatLastMessage}}}</div>
-                    <div class="last-message-time">{{{chatLastMessageTime}}}</div>
+                    <div class="last-message">{{{ chatLastMessage }}}</div>
+                    <div class="last-message-time">{{{ chatLastMessageTime }}}</div>
                 </div>
             </div>
         </div>
