--- a/src/pages/chat/pages/active-chat/active-chat.hbs
+++ b/src/pages/chat/pages/active-chat/active-chat.hbs
@@ -1,37 +1,37 @@
 <div class="chat-header">
     <div class="chat-header__avatar">
-        {{{chatAvatar}}}
+        {{{ chatAvatar }}}
     </div>
     <div class="chat-header__title">
-        {{{chatTitle}}}
+        {{{ chatTitle }}}
     </div>
     <div class="chat-header__options" title="Options">
         <div class="chat-options__menu">
-            {{#each optionsOptions}}
+            {{#each chatOptions}}
                 {{{this}}}
             {{/each}}
         </div>
-        {{{optionsIcon}}}
+        {{{ optionsIcon }}}
     </div>
 </div>
-<div class="chat">
-    {{#each chat}}
-        {{{this}}}
+<div class="chat" id="messages-list">
+    {{#each chatMessagesList}}
+        {{{ this }}}
     {{/each}}
 </div>
 <div class="chat-footer">
     <div class="chat-attach">
         <div class="chat-attach__menu">
             {{#each attachOptions}}
-                {{{this}}}
+                {{{ this }}}
             {{/each}}
         </div>
-        {{{attachIcon}}}
+        {{{ attachIcon }}}
     </div>
     <div class="chat-message">
-        {{{chatMessage}}}
+        {{{ chatSendMessage }}}
     </div>
     <div class="chat-send">
-        {{{sendIcon}}}
+        {{{ sendIcon }}}
     </div>
 </div>
