--- a/src/pages/signin/singin.css
+++ b/src/pages/signin/singin.css
@@ -1,7 +1,6 @@
 .sign-form{
     display: flex;
-    align-items: center;
     justify-content: center;
-    flex-direction: column;
     flex: auto;
+    position: relative;
 }
