--- a/src/pages/chat/pages/active-chat/active-chat.hbs
+++ b/src/pages/chat/pages/active-chat/active-chat.hbs
@@ -5,13 +5,8 @@
     <div class="chat-header__title">
         {{{ chatTitle }}}
     </div>
-    <div class="chat-header__options" title="Options">
-        <div class="chat-options__menu">
-            {{#each chatOptions}}
-                {{{this}}}
-            {{/each}}
-        </div>
-        {{{ optionsIcon }}}
+    <div class="chat-header__options">
+        {{{ optionsDropDown }}}
     </div>
 </div>
 <div class="chat" id="messages-list">
@@ -20,18 +15,15 @@
     {{/each}}
 </div>
 <div class="chat-footer">
-    <div class="chat-attach">
-        <div class="chat-attach__menu">
-            {{#each attachOptions}}
-                {{{ this }}}
-            {{/each}}
+    <form>
+        <div class="chat-attach">
+            {{{ attachDropDown }}}
         </div>
-        {{{ attachIcon }}}
-    </div>
-    <div class="chat-message">
-        {{{ chatSendMessage }}}
-    </div>
-    <div class="chat-send">
-        {{{ sendIcon }}}
-    </div>
+        <div class="chat-message">
+            {{{ chatSendMessage }}}
+        </div>
+        <div class="chat-send">
+            {{{ sendIcon }}}
+        </div>
+    </form>
 </div>
