--- a/src/pages/chat/pages/profile/profile.hbs
+++ b/src/pages/chat/pages/profile/profile.hbs
@@ -9,5 +9,17 @@
     </a>
 </div>
 <div class="form-wrapper">
-    {{{formData}}}
+    <form class="form">
+        <h3>Edit profile</h3>
+        {{{ avatarUploader }}}
+        {{{ emailInput }}}
+        {{{ loginInput }}}
+        {{{ firstNameInput }}}
+        {{{ secondNameInput }}}
+        {{{ phoneInput }}}
+        {{{ passwordInput }}}
+        {{{ repeatPasswordInput }}}
+        {{{ submitButton }}}
+        {{{ cancelLink }}}
+    </form>
 </div>
