--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -16,3 +16,22 @@
          box-shadow: 0 0 14px var(--color-primary-shadow);
     }
 }
+
+.button-icon{
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    outline: inherit;
+    display: block;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+
+    &:hover{
+        svg > path{
+            fill: var(--color-primary);
+        }
+     }
+}
