--- a/src/components/drop-down-menu/drop-down-item/drop-down-item.css
+++ b/src/components/drop-down-menu/drop-down-item/drop-down-item.css
@@ -1,4 +1,4 @@
-.menu-item{
+.drop-down-item{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -12,6 +12,10 @@
     &__icon{
         height: 36px;
         width: 36px;
+
+        svg > path {
+            fill: var(--color-gray3);
+        }
     }
 
     &__label{
@@ -20,10 +24,10 @@
         white-space: nowrap;
     }
 
-     &:hover{
+    &:hover{
         background-color: var(--bg-light-gray);
 
-        & .menu-item__icon > .icon > svg > path{
+        svg > path{
             fill: var(--color-primary);
         }
     }
