--- a/src/pages/chat/pages/active-chat/active-chat.css
+++ b/src/pages/chat/pages/active-chat/active-chat.css
@@ -10,16 +10,6 @@
     height: 24px;
     position: relative;
 
-    .icon > svg > path{
-        fill: var(--color-gray3);
-    }
-
-    & > .icon:hover{
-        svg > path{
-            fill: var(--color-primary);
-        }
-    }
-
     .chat-options__menu{
         border-radius: 5px;
         border-color: 1px solid var(--border-color);
@@ -52,16 +42,6 @@
         height: 44px;
         margin: 16px;
         cursor: pointer;
-
-        .icon > svg > path{
-            fill: var(--color-gray3);
-        }
-
-        & > .icon:hover{
-            & > svg > path{
-                fill: var(--color-primary);
-            }
-        }
     }
 
     .chat-attach{
@@ -81,5 +61,11 @@
 
     .chat-message{
         flex-grow: 1;
+    }
+
+    form{
+        display: flex;
+        flex-grow: 1;
+        align-items: center;
     }
 }
