--- a/src/pages/chat/pages/profile/components/avatar-uploader/avatar-uploader.hbs
+++ b/src/pages/chat/pages/profile/components/avatar-uploader/avatar-uploader.hbs
@@ -1,17 +1,20 @@
 <div class="avatar-uploader">
     {{#if uploadForm}}
-        <div class="avatar-uploader__form">
-            <label class="input-file">
-                <input type="file" name="file">
-                <span>Select file</span>
-            </label>
-            {{{uploadButton}}} {{{cancelButton}}}
-        </div>
+        <form class="form">
+            <div class="avatar-uploader__form">
+                <label class="input-file">
+                    <input type="file" name="file">
+                    <span>Select file</span>
+                </label>
+
+            </div>
+            {{{ uploadButton }}} {{{ cancelButton }}}
+        </form>
     {{else}}
         <a href="/chat/profile/avatar">
-        <div class="avatar-uploader__button"{{#if currentAvatar}}style="background-image: url('{{{currentAvatar}}}');"{{/if}} title="Upload avatar">
+        <div class="avatar-uploader__button"{{#if currentAvatar}}style="background-image: url('{{{ currentAvatar }}}');"{{/if}} title="Upload avatar">
             <div class="avatar-uploader__icon">
-                {{{uploadIcon}}}
+                {{{ uploadIcon }}}
             </div>
         </div>
     </a>
