--- a/src/pages/chat/pages/profile/profile.hbs
+++ b/src/pages/chat/pages/profile/profile.hbs
@@ -16,6 +16,7 @@
         {{{ loginInput }}}
         {{{ firstNameInput }}}
         {{{ secondNameInput }}}
+        {{{ displayNameInput }}}
         {{{ phoneInput }}}
         {{{ passwordInput }}}
         {{{ repeatPasswordInput }}}
