--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -3,7 +3,7 @@
         <div class="chat-header">
             {{{ userAvatar }}}
             <div class="profile-name">{{{ profileName }}}</div>
-            <a href="/chat/profile"><div class="profile-icon" title="Profile">{{{ profileIcon }}}</div></a>
+            <a href="/settings" class="router-link"><div class="profile-icon" title="Profile">{{{ profileIcon }}}</div></a>
         </div>
         <div class="chat-header">
             {{{ searchIcon }}}
