--- a/src/pages/chat/pages/profile/profile.hbs
+++ b/src/pages/chat/pages/profile/profile.hbs
@@ -2,7 +2,7 @@
     <div class="chat-header__label">
         Profile
     </div>
-    <a href="/">
+    <a href="/" class="router-link">
         <div class="chat-header__logout" title="Sign out">
             {{{iconLogout}}}
         </div>
