--- a/src/pages/chat/pages/profile/profile.hbs
+++ b/src/pages/chat/pages/profile/profile.hbs
@@ -1,3 +1,4 @@
+<div>
 <div class="chat-header">
     <div class="chat-header__label">
         Profile
@@ -23,4 +24,5 @@
         {{{ submitButton }}}
         {{{ cancelLink }}}
     </form>
+</div>
 </div>
