--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -1,6 +1,19 @@
 .spinner{
     &__wrapper{
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 199;
+        align-items: center;
+        justify-content: center;
+        display: none;
+        background-color: rgba(0, 0, 0, 0.3);
 
+        &.visible{
+            display: flex;
+        }
     }
 
     &__loader{
