--- a/src/components/input/input.hbs
+++ b/src/components/input/input.hbs
@@ -1,4 +1,4 @@
-<div class="my-10 input-wrapper{{#if icon}} with-icon{{/if}}">
+<div class="my-10 input-wrapper">
     {{#if label}}
         <label
             {{#if id}}
