--- a/src/pages/signin/signin.hbs
+++ b/src/pages/signin/signin.hbs
@@ -1,10 +1,12 @@
 <div class="sign-form">
-    {{{ spinner }}}
+    {{{ modal }}}
     <form class="form">
         <h3>Sign In</h3>
         {{{ loginInput }}}
         {{{ passwordInput }}}
         {{{ submitButton }}}
         {{{ signUpLink }}}
+        {{{ signUpLink2 }}}
+        {{{ signUpLink3 }}}
     </form>
 </div>
