--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -1,6 +1,6 @@
 .spinner{
     &__wrapper{
-        position: fixed;
+        position: absolute;
         top: 0;
         left: 0;
         right: 0;
@@ -9,7 +9,8 @@
         align-items: center;
         justify-content: center;
         display: none;
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.15);
+        backdrop-filter: blur(2px);
 
         &.visible{
             display: flex;
@@ -17,8 +18,8 @@
     }
 
     &__loader{
-         width: 48px;
-         height: 48px;
+         width: 64px;
+         height: 64px;
          border: 3px solid var(--color-gray3);
          border-radius: 50%;
          display: inline-block;
@@ -33,8 +34,8 @@
              left: 50%;
              top: 50%;
              transform: translate(-50%, -50%);
-             width: 56px;
-             height: 56px;
+             width: 75px;
+             height: 75px;
              border-radius: 50%;
              border: 3px solid transparent;
              border-bottom-color: var(--color-primary);
