--- a/src/components/spinner/spinner.hbs
+++ b/src/components/spinner/spinner.hbs
@@ -1,3 +1,3 @@
 <div class="spinner__wrapper{{#if isLoading}} visible{{/if}}">
-    <span class="spinner__loader">{{{isLoading}}}</span>
+    <span class="spinner__loader"></span>
 </div>
