--- a/src/components/toast/toast.css
+++ b/src/components/toast/toast.css
@@ -17,6 +17,11 @@
         transform: translateY(-100px);
     }
 
+    &.info{
+         border: 1px solid var(--color-info-border);
+         background-color: var(--color-info-bg);
+         color: var(--color-info);
+    }
 
     &.warning{
         border: 1px solid var(--color-warning-border);
