--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
     --color-warning: #856404;
     --color-warning-bg: #fff3cd;
     --color-warning-border: #ffeeba;
+    --color-info: #0a3622;
+    --color-info-bg: #d1e7dd;
+    --color-info-border: #a3cfbb;
     --second-bg-color: #f5f5f5;
     --link-color: #1d74f5;
     --color-white-shadow: var(--color-gray);
