--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,19 +1,37 @@
-.modal-wrapper{
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: 50;
-    background-color: rgba(0, 0, 0, 0.3);
-    display: flex;
+.modal{
+    &__wrapper{
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        z-index: 50;
+        background-color: rgba(0, 0, 0, 0.3);
+        display: flex;
+    }
 
-    .modal-container{
-        margin: 15px;
-        background-color: var(--main-bg-color);
-        flex: 1;
-        border: 1px solid var(--border-color);
-        border-radius: 10px;
-        padding: 15px;
+    &__container {
+         width: 320px;
+         margin: auto;
+         background-color: var(--main-bg-color);
+         /*flex: 1;*/
+         display: flex;
+         flex-direction: column;
+         border: 1px solid var(--border-color);
+         border-radius: 10px;
+    }
+
+    &__header{
+        border-bottom: 1px solid var(--color-gray);
+        padding: 10px;
+        display: flex;
+
+        &-label{
+            flex-grow: 1;
+        }
+
+        &-close{
+
+        }
     }
 }
