--- a/src/pages/messenger/pages/profile/profile.hbs
+++ b/src/pages/messenger/pages/profile/profile.hbs
@@ -22,7 +22,7 @@
             {{{ passwordInput }}}
             {{{ repeatPasswordInput }}}
             {{{ submitButton }}}
-            {{{ cancelLink }}}
+            {{{ changePasswordLink }}}
         </form>
     </div>
 </div>
