--- a/src/components/modal/modal.hbs
+++ b/src/components/modal/modal.hbs
@@ -1,5 +1,17 @@
-<div class="modal-wrapper" ref="background">
-    <div class="modal-container">
-        MODAL
+<div class="modal__wrapper" ref="background">
+    <div class="modal__container">
+        <div class="modal__header">
+            <div class="modal__header-label">
+                {{{ modalLabel }}}
+            </div>
+            <div class="modal__header-close">
+                {{{ hideButton }}}
+            </div>
+        </div>
+        <div class="modal__content">
+            {{#each modalChildren}}
+                {{{ this }}}
+            {{/each}}
+        </div>
     </div>
 </div>
