--- a/src/pages/messenger/messenger.hbs
+++ b/src/pages/messenger/messenger.hbs
@@ -3,20 +3,17 @@
         <div class="chat-header">
             {{{ userAvatar }}}
             <div class="profile-name">{{{ user.first_name }}} {{{ user.second_name }}}</div>
-            <div class="profile-icon" title="Profile">{{{ profileIcon }}}</div>
+            <div class="profile-icon" title="Profile">{{{ profileLink }}}</div>
         </div>
         <div class="chat-header">
             {{{ searchIcon }}}
             {{{ searchInput }}}
         </div>
-        {{{ logout }}}
         <div class="chats-list">
-            {{#each chatsList}}
-                {{{ this }}}
-            {{/each}}
+            {{{ chatsList }}}
         </div>
     </div>
     <div class="chats-main">
-        {{{ w }}}
+        {{{ currentWindow }}}
     </div>
 </div>
