--- a/src/pages/messenger/pages/active-chat/active-chat.hbs
+++ b/src/pages/messenger/pages/active-chat/active-chat.hbs
@@ -1,5 +1,8 @@
 {{#if currentChat }}
     <div style="display: contents">
+        {{{ addUserModal }}}
+        {{{ deleteUserModal }}}
+        {{{ deleteChatModal }}}
         <div class="chat-header">
             <div class="chat-header__avatar">
                 {{{ chatAvatar }}}
