--- a/src/components/button/button.hbs
+++ b/src/components/button/button.hbs
@@ -1,5 +1,5 @@
 <button
-    class="{{#if icon}}button-icon{{else}}button{{/if}}"
+    class="{{{classes}}}"
     {{#if id}}
         id="{{{ id }}}"
     {{/if}}
