--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -15,6 +15,11 @@
          cursor: pointer;
          box-shadow: 0 0 14px var(--color-primary-shadow);
     }
+
+    &.inline{
+        margin: 5px 10px;
+        width: auto;
+    }
 }
 
 .button-icon{
