--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,10 +1,7 @@
 .modal{
     &__wrapper{
         position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
+        inset: 0;
         z-index: 50;
         background-color: rgba(0, 0, 0, 0.3);
         display: flex;
@@ -14,7 +11,6 @@
          width: 320px;
          margin: auto;
          background-color: var(--main-bg-color);
-         /*flex: 1;*/
          display: flex;
          flex-direction: column;
          border: 1px solid var(--border-color);
@@ -28,10 +24,23 @@
 
         &-label{
             flex-grow: 1;
+            font-size: 16px;
+            font-weight: bold;
         }
 
+        /*
         &-close{
+        }
+        */
+    }
 
+    &__content{
+        padding: 5px;
+
+        &.flex-row{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
         }
     }
 }
