--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -1,10 +1,7 @@
 .spinner{
     &__wrapper{
         position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
+        inset: 0;
         z-index: 199;
         align-items: center;
         justify-content: center;
@@ -47,6 +44,7 @@
     0% {
         transform: rotate(0deg);
     }
+
     100% {
         transform: rotate(360deg);
     }
