--- a/src/index.css
+++ b/src/index.css
@@ -67,12 +67,15 @@ nav{
     flex: 1 1 auto;
     background-color: var(--color-white);
     position: relative;
+
     /* margin: 15px; */
+
     margin: 20px 15px 15px;
     border: 1px solid var(--border-color);
     border-radius: 10px;
     box-shadow: 0 0 5px var(--border-color);
 }
+
 #router-view{
     display: contents;
 }
@@ -114,7 +117,7 @@ h3{
 }
 
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 0px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.3);
 }
 
 ::-webkit-scrollbar-thumb {
