--- a/src/pages/messenger/messenger.hbs
+++ b/src/pages/messenger/messenger.hbs
@@ -2,7 +2,7 @@
     <div class="chats-side">
         <div class="chat-header">
             {{{ userAvatar }}}
-            <div class="profile-name">{{{ user.first_name }}} {{{ user.second_name }}}</div>
+            <div class="profile-name">{{{ profileName }}}</div>
             <div class="profile-icon" title="Profile">{{{ profileLink }}}</div>
         </div>
         <div class="chat-header">
