--- a/src/pages/messenger/messenger.css
+++ b/src/pages/messenger/messenger.css
@@ -60,11 +60,13 @@
     }
 }
 
-/* @media screen and (max-width: 700px){
+/*
+@media screen and (max-width: 700px){
     .chats-side{
         margin-left: -320px;
         position: absolute;
         background-color: var(--main-bg-color);
         z-index: 1;
     }
-} */
+}
+*/
