--- a/src/pages/messenger/pages/active-chat/active-chat.hbs
+++ b/src/pages/messenger/pages/active-chat/active-chat.hbs
@@ -1,4 +1,4 @@
-{{#if currentChat }}
+{{#if currentChat.id }}
     <div style="display: contents">
         {{{ addUserModal }}}
         {{{ deleteUserModal }}}
@@ -8,7 +8,7 @@
                 {{{ chatAvatar }}}
             </div>
             <div class="chat-header__title">
-                {{{ chatTitle }}}
+                {{{ currentChat.title }}}
             </div>
             <div class="chat-header__options">
                 {{{ optionsDropDown }}}
