--- a/src/pages/messenger/pages/active-chat/active-chat.hbs
+++ b/src/pages/messenger/pages/active-chat/active-chat.hbs
@@ -8,14 +8,14 @@
                 {{{ chatAvatar }}}
             </div>
             <div class="chat-header__title">
-                {{{ currentChat.title }}}
+                {{{ currentChat.title }}} # {{{ currentChat.id }}}
             </div>
             <div class="chat-header__options">
                 {{{ optionsDropDown }}}
             </div>
         </div>
         <div class="chat" id="messages-list">
-            << MESSAGES >>
+            {{{ messagesList }}}
         </div>
         <div class="chat-footer">
             <form>
