--- a/src/pages/messenger/components/message/message.hbs
+++ b/src/pages/messenger/components/message/message.hbs
@@ -1,11 +1,13 @@
-<div class="message">
-    <div class="message__sender">
-        {{{ messageSender }}}
+<div class="message {{{ messageType }}}">
+    <div class="message__wrapper">
+        <div class="message__sender">
+            {{{ messageSender }}}
+        </div>
+        <div class="message__content">
+            {{{ messageContent }}}
+        </div>
+        <div class="message__time">
+            {{{ messageTime }}}
+        </div>
     </div>
-    <div class="message__content">
-        {{{ messageContent }}}
-    </div>
-    <div class="message__time">
-        {{{ messageTime }}}
-    </div>    
 </div>
