--- a/src/pages/messenger/messenger.hbs
+++ b/src/pages/messenger/messenger.hbs
@@ -1,8 +1,8 @@
 <div class="chat-wrapper">
     <div class="chats-side">
         <div class="chat-header">
-            {{{ userAvatar }}}
-            <div class="profile-name">{{{ profileName }}}</div>
+            <div class="profile-avatar">{{{ userAvatar }}}</div>
+            <div class="profile-name">{{ profileName }}</div>
             <div class="profile-icon" title="Profile">{{{ profileLink }}}</div>
         </div>
         <div class="chat-header">
