--- a/src/pages/messenger/components/avatar/avatar.css
+++ b/src/pages/messenger/components/avatar/avatar.css
@@ -1,6 +1,8 @@
 .avatar{
-    min-width: 55px;
-    min-height: 55px;
+    min-width: 24px;
+    min-height: 24px;
+    width: 100%;
+    height: 100%;
     background-color: var(--color-light-gray);
     border-radius: 5px;
     background-size: cover;
