--- a/src/pages/messenger/components/chat-element/chat-element.hbs
+++ b/src/pages/messenger/components/chat-element/chat-element.hbs
@@ -1,18 +1,22 @@
 <div class="chat-element">
     <div class="chat-element__element">
         <div class="user-avatar">
-            {{{ chatElement.avatar }}}
+            {{{ chatAvatar }}}
         </div>
         <div class="chat-info">
             <div class="chat-info__row">
-                <div class="user-name">{{{ chatElement.title }}}</div>
+                <div class="user-name">{{ chatElement.title }}</div>
                 {{#if chatNewMessages}}
                     <div class="chat-new-messages">{{{ chatNewMessages }}}</div>
                 {{/if}}
             </div>
             <div class="chat-info__row">
-                <div class="last-message">{{{ chatLastMessage }}}</div>
-                <div class="last-message-time">{{{ chatLastMessageTime }}}</div>
+                {{#if chatLastMessage}}
+                    <div class="last-message">{{#if chatOwnLastMessage}}<b>You:</b> {{/if}}{{ chatLastMessage }}</div>
+                    <div class="last-message-time">{{{ chatLastMessageTime }}}</div>
+                {{else}}
+                    <i>No messages yet</i>
+                {{/if}}
             </div>
         </div>
     </div>
