--- a/src/pages/messenger/components/message/message.hbs
+++ b/src/pages/messenger/components/message/message.hbs
@@ -1,10 +1,10 @@
 <div class="message {{{ messageType }}}">
     <div class="message__wrapper">
         <div class="message__sender">
-            {{{ messageSender }}}
+            {{ messageSender }}
         </div>
         <div class="message__content">
-            {{{ messageContent }}}
+            {{ messageContent }}
         </div>
         <div class="message__time">
             {{{ messageTime }}}
