--- a/src/pages/messenger/components/messages-list/messages-list.hbs
+++ b/src/pages/messenger/components/messages-list/messages-list.hbs
@@ -1,5 +1,13 @@
-<div class="messages-list">
-    {{#each messages}}
-        {{{ this }}}
-    {{/each}}
+<div class="messages">
+    <div>
+        {{#if canLoadMore}}
+            {{{ loadMore }}}
+        {{/if}}
+    </div>
+    <div class="messages__list">
+        {{#each messages}}
+            {{{ this }}}
+        {{/each}}
+    </div>
+
 </div>
