--- a/src/pages/messenger/pages/profile/profile.hbs
+++ b/src/pages/messenger/pages/profile/profile.hbs
@@ -1,13 +1,14 @@
 <div style="display: contents;">
     <div class="chat-header">
+        <div class="chat-header__back" title="Back">
+            {{{ chatIconBack }}}
+        </div>
         <div class="chat-header__label">
             Profile
         </div>
-
         <div class="chat-header__logout" title="Sign out">
             {{{iconLogout}}}
         </div>
-
     </div>
     <div class="form-wrapper">
         <form class="form">
