--- a/src/pages/messenger/components/messages-list/messages-list.hbs
+++ b/src/pages/messenger/components/messages-list/messages-list.hbs
@@ -1,5 +1,7 @@
 <div class="messages">
+
     <div>
+        <div id="intersector"></div>
         {{#if canLoadMore}}
             {{{ loadMore }}}
         {{/if}}
