--- a/src/pages/messenger/components/message/message.css
+++ b/src/pages/messenger/components/message/message.css
@@ -38,11 +38,47 @@
         margin-bottom: 5px;
     }
 
+    .message__content{
+        .download{
+            background-color: rgba(0, 0, 0, 0.25);
+            position: absolute;
+            bottom: 0;
+            right: 0;
+        }
+
+        .image-preview{
+            position: relative;
+            background-color: var(--color-light-gray);
+            border-radius: 5px;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            border: 1px solid var(--color-gray);
+            width: 200px;
+            height: 150px;
+            cursor: pointer;
+
+
+
+            &.full {
+                position: absolute;
+                background-size: contain;
+                width: 100%;
+                left: 0;
+                top: 0;
+                height: 100%;
+                z-index: 100;
+            }
+        }
+    }
+
     .message__time{
         font-size: 12px;
         justify-content: flex-end;
         display: flex;
     }
+
+
 }
 
 
