--- a/src/pages/messenger/components/media/media.hbs
+++ b/src/pages/messenger/components/media/media.hbs
@@ -1,4 +1,4 @@
-<div class="media">
+<div class="media" title="Delete">
     <div
         class="media__preview"
         style="background-image: url('{{url}}');"
