--- a/src/components/drop-down-menu/drop-down-menu.css
+++ b/src/components/drop-down-menu/drop-down-menu.css
@@ -22,6 +22,7 @@
     box-shadow: 0 0 14px var(--color-white-shadow);
     display: flex;
     flex-direction: column;
+    z-index: 25;
 
     &.hidden{
         visibility: hidden;
