--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ nav{
 
 @media screen and (max-width: 700px){
     #wrapper{
-        margin: 60px 0 0;
+        margin: 0;
         border-radius: 0;
     }
 }
