--- a/src/pages/messenger/components/media/media.css
+++ b/src/pages/messenger/components/media/media.css
@@ -4,6 +4,7 @@
     margin: 5px;
     border: 1px solid var(--color-gray);
     border-radius: 3px;
+    cursor: pointer;
 
     &:hover{
         border-color: var(--color-primary);
