--- a/src/pages/messenger/messenger.css
+++ b/src/pages/messenger/messenger.css
@@ -29,6 +29,23 @@
         border-radius: 0 5px 5px 0;
         display: flex;
         flex-direction: column;
+        position: relative;
+
+        .side-toggle{
+            display: none;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 55px;
+            height: 65px;
+            cursor: pointer;
+            z-index: 50;
+            background-color: var(--color-gray);
+
+            svg > path{
+                fill: var(--color-primary);
+            }
+        }
     }
 }
 
@@ -65,13 +82,21 @@
     }
 }
 
-/*
 @media screen and (max-width: 700px){
+    .side-toggle{
+        display: flex !important;
+    }
+
     .chats-side{
         margin-left: -320px;
+        margin-top: 65px;
         position: absolute;
         background-color: var(--main-bg-color);
         z-index: 1;
+        height: 100%;
+
+        &.expand{
+            margin-left: 0 !important;
+        }
     }
 }
-*/
