--- a/src/pages/messenger/messenger.hbs
+++ b/src/pages/messenger/messenger.hbs
@@ -14,6 +14,7 @@
         </div>
     </div>
     <div class="chats-main">
+        <div class="side-toggle">{{{ sideToggle }}}</div>
         {{{ currentWindow }}}
     </div>
 </div>
